--- a/src/App.scss
+++ b/src/App.scss
@@ -6,12 +6,23 @@ div {
 span {
   border: 0px blue solid;
 }
+
+#exploreCanvas {
+  > g {
+    transform-box: fill-box;
+    transform-origin: 50% 50%;
+  }
+  width: 100%;
+  height: 100%;
+}
+
 .App {
   text-align: left;
   a {
     color: blue;
     padding-top: 10px;
   }
+  width: 600px;
 }
 
 .title {
@@ -25,11 +36,11 @@ span {
 }
 
 .exploreBoard {
-  canvas {
-    width: 100vw;
-    height: 50vh;
-  }
+  width: 600px;
+  height: 50vh;
   background-color: slategrey;
+  position: fixed;
+  z-index: 1;
 }
 
 .infoCard {
@@ -166,10 +177,11 @@ span {
 }
 
 .Producer {
+  box-sizing: border-box;
   padding: 0.5em;
   background-color: #282c34;
   height: 150px;
-  width: 600px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: left;
