--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,11 @@ span {
   }
   width: 100%;
   height: 100%;
+
+  #rotateHandle {
+    transform-box: fill-box;
+    transform-origin: 50% 50%;
+  }
 }
 
 .App {
