Add blocking terrain.
These boulders block line of sight for shooting.

--- a/src/App.scss
+++ b/src/App.scss
@@ -44,7 +44,7 @@ span {
   user-select: none;
   width: 600px;
   height: 50vh;
-  background-color: slategrey;
+  background-color: #6c5435;
   position: fixed;
   z-index: 1;
 
