--- a/src/App.scss
+++ b/src/App.scss
@@ -15,7 +15,25 @@ span {
   top: 0;
   background-color: white;
 
-  .startCard {
+  .modalBg {
+    position: absolute;
+    background-color: grey;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  .modalContent {
+    user-select: none;
+    padding: 15px;
+    background-color: white;
+    margin: 150px 30px;
+    .title {
+      color: black;
+      font-size: 2em;
+      line-height: 2em;
+    }
   }
 
   .exploreBoard {
@@ -128,8 +146,8 @@ span {
 }
 
 .resetButton {
-  width: 5%;
   text-align: center;
+  padding: 10px;
 }
 
 .clickable {
