Main Bus updates
Notable Changes
* Only transfer integer units between stacks
* Extractor recipes have an ingredients that corresponds to it's output

--- a/src/App.scss
+++ b/src/App.scss
@@ -80,7 +80,7 @@ span {
 }
 
 .clickable {
-  box-shadow: 4px 6px #060708;
+  box-shadow: 2px 2px #36373844;
   border: #121515 inset;
   cursor: pointer;
   user-select: none;
