Light UI polish

--- a/src/App.scss
+++ b/src/App.scss
@@ -81,7 +81,7 @@ span {
 
 .clickable {
   box-shadow: 2px 2px #36373844;
-  border: #121515 inset;
+  border: #121515cc inset 1px;
   cursor: pointer;
   user-select: none;
 }
