--- a/src/components/FactoryGame.scss
+++ b/src/components/FactoryGame.scss
@@ -17,6 +17,8 @@
     user-select: none;
     width: 80px;
     height: 32px;
+    text-align: center;
+    line-height: 32px;
   }
   .belt-count {
     font-size: 22px;
