--- a/src/components/ProducerCard.scss
+++ b/src/components/ProducerCard.scss
@@ -1,11 +1,12 @@
 .producerCard {
-  width: 675px;
+  width: 1000px;
   height: 100px;
   //border: 1px black solid;
   display: flex;
   background: lightgrey;
   box-sizing: border-box;
   user-select: none;
+  justify-content: flex-end;
 
   .icon {
   }
