Can now change building recipes.
Added a bunch of jank in the UI, will need to refactor

--- a/src/components/ProducerCard.scss
+++ b/src/components/ProducerCard.scss
@@ -143,3 +143,11 @@
     appearance: none;
   }
 }
+
+.change-recipe {
+  font-size: 18px;
+  line-height: 20px;
+  width: 180px;
+  margin: auto 0;
+  padding: 6px;
+}
