--- a/src/App.scss
+++ b/src/App.scss
@@ -54,10 +54,11 @@ span {
 }
 
 .reset-button {
-  height: 32px;
   font-size: 16px;
   line-height: 32px;
-  //   text-decoration: underline;
-  //   color: blue;
-  //   cursor: pointer;
+  padding: 0 6px;
+  width: 110px;
+  border: 1px black inset;
+  cursor: pointer;
+  user-select: none;
 }
